Corrected alignment

--- a/style.css
+++ b/style.css
@@ -45,8 +45,7 @@ table tr td{
 .container{
     width: 100%;
     max-width:1600px;
-    padding: 4rem 3rem 4.2rem 3rem;
-    
+    padding: 2rem;
 }
 
 a{
@@ -62,9 +61,8 @@ p{
     line-height: 1.7;
 }
 header{
-    background-color: rgb(248, 248, 248);
-     
-    padding: 2rem;
+    background-color: rgb(248, 248, 248);   
+    padding: 5rem;
 }
 
 h1{
@@ -84,14 +82,14 @@ ul{
     list-style-type: circle;
     padding: 1rem 1.5rem ;
     line-height: 1.6;
-    margin-bottom: 1rem;
+    margin-left: -.2rem;
 }
 li{
     color:  rgb(17, 155, 118);
 }
 
 #calculator{
-    width: 95%;
+    width: 100%;
     max-width: 1080px;
     margin: 1.5rem 0;
 }
@@ -162,7 +160,7 @@ select{
 @media only screen and (max-width: 461px){
     h1{font-size:1.8rem}
     header{
-        padding: 0.8rem;        
+        padding: 1.8rem;        
     }
     .calculator-sublock-input{
         text-align: end;
@@ -233,7 +231,6 @@ mark{
 }
 @media screen and (min-width: 1600px){
     #header-container{
-
         max-width: 70%;
         margin-left: 40em;
     }
@@ -295,6 +292,11 @@ mark{
     border: none;
     font-size: 1.2rem;
     cursor: pointer;
+}
+@media screen and (max-width: 400px){
+    .button{
+        font-size: .95rem;
+    }
 }
 footer{
     display: flex;
